--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@react-native-community/netinfo",
-  "version": "1.0.1",
+  "name": "@volta/netinfo",
+  "version": "1.0.2",
   "description": "React Native Network Info API for iOS & Android",
   "react-native": "src/index.ts",
   "types": "lib/typescript/src/index.d.ts",
@@ -19,9 +19,11 @@
   ],
   "author": "Matt Oakes <hello@mattoakes.net>",
   "contributors": [
-    "Mike Diarmid (Salakar) <mike@invertase.io>"
+    "Mike Diarmid (Salakar) <mike@invertase.io>",
+    "Ezequiel Excoffon ezequiel.excoffon-c@voltacharging.com",
+    "Ryan Liszewski <ryan@voltacharging.com>"
   ],
-  "homepage": "https://github.com/react-native-community/react-native-netinfo#readme",
+  "homepage": "https://https://github.com/Volta-Charging/react-native-netinfo#readme",
   "license": "MIT",
   "scripts": {
     "start": "react-native start",
@@ -44,7 +46,8 @@
     "test:e2e:macos": "scripts/run_macos_e2e.sh 'test'",
     "ci:publish": "yarn semantic-release",
     "semantic-release": "semantic-release",
-    "prepare": "bob build"
+    "prepare": "bob build",
+    "publish": "yarn publish --new-version $npm_package_version"
   },
   "keywords": [
     "react-native",
@@ -129,7 +132,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-community/react-native-netinfo.git"
+    "url": "https://github.com/Volta-Charging/react-native-netinfo.git"
   },
   "@react-native-community/bob": {
     "source": "src",
